--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Bobby2Kills/TheIHSTMSB#readme",
   "dependencies": {
+    "isomorphic-fetch": "^3.0.0",
     "jest": "^29.3.1",
     "node": "^19.1.0",
     "sequelize": "^6.25.6",
