--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "theihstmsb",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -23,5 +22,10 @@
     "node": "^19.1.0",
     "sequelize": "^6.25.6",
     "sqlite3": "^5.1.2"
-  }
+  },
+  "directories": {
+    "test": "tests"
+  },
+  "devDependencies": {},
+  "description": ""
 }
