--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -17,15 +18,16 @@
   },
   "homepage": "https://github.com/Bobby2Kills/TheIHSTMSB#readme",
   "dependencies": {
+    "express": "^4.18.2",
     "isomorphic-fetch": "^3.0.0",
     "jest": "^29.3.1",
     "node": "^19.1.0",
+    "nodemon": "^2.0.20",
     "sequelize": "^6.25.6",
     "sqlite3": "^5.1.2"
   },
   "directories": {
     "test": "tests"
   },
-  "devDependencies": {},
   "description": ""
 }
